Fixed trip card spacing.

--- a/pack-planit-frontend/src/App.css
+++ b/pack-planit-frontend/src/App.css
@@ -54,11 +54,15 @@ header {
 
 .nav-item {
   list-style: none;
+  display: flex;
 }
 
 .nav-link {
   text-decoration: none;
   color: black;
+  font-size: 1rem;
+  font-family: 'Crimson Text', serif;
+  display: flex;
 }
 
 /* || Main Section */
@@ -73,6 +77,7 @@ header {
     background-attachment: fixed;
     width: 100%;
     height: 75vh;
+    overflow: scroll; 
 }
 
 .main-content {
@@ -105,55 +110,32 @@ header {
   font-family: 'Unica One', cursive;
 }
 
-
 /* || Trips Section */
 .trips-container {
-  display: flex;
-  justify-content: left;
+  padding: .7em;
   background-color: rgb(242, 242, 242);
   width: 100%;
   height: 75vh;
 }
 
-.trips h2 {
+.trips-container h2 {
   font-size: 3rem;
   font-family: 'Unica One', cursive;
-  padding: .7em;
 }
 
-.trips h3 {
-  font-size: 1.5rem;
-  font-family: 'Crimson Text', serif;
-}
-
-/* .trips-filter {
+.trips-list {
   display: flex;
-  justify-content: left;
-  background-color: rgb(242, 242, 242);
-} */
-
-/* .trips-upcoming-title {
-  display: flex-start;
-  flex-direction: column;
-  background-color: white;
-  justify-content: space-between;
-  margin: .3em;
-  padding: .3em;
+  justify-content: space-around;
 }
 
-.trips-past-title {
-  display: flex-start;
-  flex-direction: column;
-  background-color: white;
-  justify-content: space-between;
-  margin: .3em;
-  padding: .3em;
-} */
+#trip-title {
+  font-size: 1.5rem;
+  display: flex;
+}
 
 .trip-card {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
   background-color: white;
   max-width: 13em;
@@ -169,7 +151,7 @@ header {
   width: 100%;
 }
 
-/* || Plan Page */
+/* || LogIt Page */
 .log-it-container {
     display: flex;
     align-items: center;
